<resources>
    <string name="app_name">Бюджет</string>
    <string name="action_settings">Настройки</string>
    <string name="reload">reload</string>
    <string name="text_view_main_font">Размер основного шрифта</string>
    <string name="text_view_optional_font">Размер дополнительного шрифта</string>
    <string name="popup_menu_item_delete">Удалить</string>
    <string name="popup_menu_item_duplicate">Дублировать</string>
    <string name="popup_menu_item_edit">Заполнить файл тестовыми данными</string>
    <string name="APP_PREFERENCES">mysettings</string>
    <string name="APP_NIGHTMODE">NIGHTMODE</string>
    <string name="settings">Настройки</string>
    <string name="export_to_excel">Экспорт в Excel</string>
    <string name="menu_export_and_backup">Экспорт и бэкап</string>
    <string name="menu_expense_items">Статьи расходов</string>
    <string name="menu_accounts">Счета</string>
    <string name="add_gain_and_expenses">Добавление расхода или дохода</string>
    <string name="add_expense_items">Добавление статьи расходов</string>
    <string name="food_products">Продукты питания</string>
    <string name="Date">Дата</string>
    <string name="type">Тип</string>
    <string name="expense_item">Статья расходов</string>
    <string name="debit_account">Счёт списания</string>
    <string name="note">Примечания\n</string>
    <string name="amount">Сумма</string>
    <string name="Add">Добавить</string>
    <string name="date_example">30.11.2023</string>
    <string name="account_example">*8888</string>
    <string name="expense_item_example">Продукты питания</string>
    <string name="text_amount_example">250 р.</string>
    <string name="date_and_time_example">30.11.2023 09:05</string>
    <string name="sms_text_example">Покупка, карта *8555. 300 RUB. MAGNIT MM. Доступно 57334.33 RUB</string>
    <string name="add_expense_or_income">Добавление расхода или дохода</string>
    <string name="enter_expense_item">Введите название статьи</string>
    <string name="save_expense_item">Cохранить</string>
    <string name="add_new_expense_item">Введите название новой статьи</string>
    <string name="edit_text_date">Поле для ввода даты</string>
    <string name="type_income_or_expense">Тип (доход/расход)</string>
    <string name="date">Дата операции</string>
    <string name="expense_item_edit_text">Статья расходов</string>
    <string name="debit_account_edit_text">Счёт списания/пополнения</string>
    <string name="note_edit_text">Примечания</string>
    <string name="amount_edit_text">Сумма</string>
    <string name="cancel_expense_item">Отменить</string>
    <string name="hint_expense_item">Статья расходов/доходов</string>
    <string name="hint_operation_type">Тип операции</string>
    <string name="hint_note">Примечание</string>
    <string name="previous_fragment">Предыдущее меню</string>
    <string name="text_account_example">Тинькофф *8555</string>
    <string name="text_expense_type_example">кредитная\n</string>
    <string name="text_sender_example">Тинькофф</string>
    <string name="export_and_backup">ЭКСПОРТ И БЭКАП</string>
    <string name="backup_data">Бэкап данных</string>
    <string name="yandex_disk">Яндекс диск</string>
    <string name="google_cloud">Гугл облако</string>
    <string name="this_device">Это устройство</string>
    <string name="settings_backup">Настройки бэкапа</string>
    <string name="hint_periodicity_backup">Периодичность бэкапа</string>
    <string name="hint_day_of_the_week">День недели</string>
    <string name="restoring_backup">Восстановление из Бэкапа</string>
    <string name="expense_item_name">Название статьи</string>
    <string name="designation_in_sms">Обозначение в СМС</string>
    <string name="enter_seller_name_from_sms">Введите название продавца из СМС</string>
    <string name="account_name">Название счета</string>
    <string name="bank">Банк</string>
    <string name="account_type">Тип счёта</string>
    <string name="sms_sender">Отправитель СМС</string>
    <string name="balance">Баланс</string>
    <string name="buy">Покупка</string>
    <string name="account_name_example">Тинькофф *8555</string>
    <string name="amount_example">57334,33</string>
    <string name="menu_sms_fragment">СМС фрагмент</string>
    <string name="sms_fragment">СМС фрагмент</string>
    <string name="planning">Планирование</string>

    <string-array name="expense_item_list" translatable="false">
        <item>Продукты</item>
        <item>ЖКХ</item>
        <item>Зарплата</item>
        <item>Ресторан</item>
    </string-array>

    <string-array name="bank_list" translatable="false">
        <item>Тинькофф</item>
        <item>Сбербанк</item>
        <item>Альфабанк</item>
        <item>ВТБ</item>
    </string-array>

    <string-array name="bank_account_type" translatable="false">
        <item>Кредитная</item>
        <item>Дебетовая</item>
        <item>Накопительный</item>
    </string-array>

    <string-array name="debit_account_list" translatable="false">
        <item>Тинькофф *8888</item>
        <item>Сбербанк *5555</item>
        <item>Альфабанк *3333</item>
        <item>Тинькофф кредитная </item>
    </string-array>

    <string-array name="types_list" translatable="false">
        <item>Доход</item>
        <item>Расход</item>
        <item>Корректировка</item>
    </string-array>

    <string-array name="periodicity_backup_list" translatable="false">
        <item>Ежедневно</item>
        <item>Еженедельно</item>
        <item>Ежемесячно</item>
    </string-array>

    <string-array name="day_of_the_week_list" translatable="false">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete Account</string>
    <string name="add_account">Add Account</string>
    <string name="card_type">Тип карты</string>
    <string name="card_limit">Кредитный лимит</string>
    <string name="card_pan">Шаблон</string>
    <string name="card_balance">Баланс карты</string>
    <string name="save">Сохранить</string>
    <string name="menu_sellers">Продавцы</string>
    <string name="credit_limit">Кредитный лимит</string>


</resources>