<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_export_and_backup"
            android:icon="@drawable/ic_backup"
            android:title="@string/menu_export_and_backup"/>
        <item
            android:id="@+id/navigation_expense_items"
            android:icon="@drawable/ic_expense_items"
            android:title="@string/menu_expense_items"/>
        <item
            android:id="@+id/navigation_accounts"
            android:icon="@drawable/ic_bills_list"
            android:title="@string/menu_accounts" />

        <item
            android:id="@+id/navigation_sellers"
            android:icon="@drawable/ic_shop_24"
            android:title="@string/menu_sellers" />

    </group>
</menu>
