<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bank"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tinkoff" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_example"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/img_bank"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_example"
        android:layout_marginEnd="@dimen/margin_12_dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_expense_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_item_example"
        android:layout_marginEnd="@dimen/margin_12_dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/img_bank"
        app:layout_constraintTop_toBottomOf="@id/text_date"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_example"
        android:layout_marginEnd="@dimen/margin_12_dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_account"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"
        app:layout_constraintBottom_toBottomOf="@+id/img_bank"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
