<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/actionBarItemBackground"
    app:behavior_hideable="true"
    app:behavior_peekHeight="10dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <View
        android:id="@+id/bottom_sheet_line"
        android:layout_width="25dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_enter_expense_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_expense_item"
        android:textSize="@dimen/recycler_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="@dimen/margin_15_dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_enter_expense_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:contentDescription="@string/add_new_expense_item"
        android:textSize="@dimen/recycler_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_expense_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_expense_item"
        style="@style/MyThemeOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15_dp"
        android:text="@string/save_expense_item"
        android:textSize="@dimen/loading_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_expense_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
